--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "axios": "^1.7.2",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2"
-  },
+  "axios": "^1.7.4",
+  "dotenv": "^16.4.5",
+  "express": "^4.19.2",
+  "redis": "^4.7.0"
+},
   "engines": {
     "node": "20.x"
   }
