--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "axios": "^1.7.4",
   "dotenv": "^16.4.5",
   "express": "^4.19.2",
-  "redis": "^4.7.0"
+  "redis": "^4.7.0",
+  "slugify": "^1.6.6"
 },
   "engines": {
     "node": "20.x"
