--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "deepseek-llm-lecture",
   "version": "1.0.0",
   "description": "Railway-deployable service that requests a ~6000-word LLM lecture from DeepSeek",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node app.js"
   },
   "dependencies": {
   "axios": "^1.7.4",
